--- a/Alphasoft/Alphasoft.csproj
+++ b/Alphasoft/Alphasoft.csproj
@@ -45,6 +45,72 @@
     <None Include="Views\ClientView\TeamView.cshtml" />
     <None Include="Views\ClientView\TeamViewDetails.cshtml" />
     <None Include="wwwroot\js\AboutUs\aboutUs.js" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\.gitattributes" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\.gitignore" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\.jscsrc" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\.jshintrc" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\.travis.yml" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\build\toastr.js.map" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\build\toastr.min.js" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\CHANGELOG.md" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\gulpfile.js" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\karma.conf.js" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\LICENSE" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\content\content\toastr.less" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\content\content\toastr.scss" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\content\scripts\toastr.js" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\content\scripts\toastr.min.js" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\content\scripts\toastr.min.js.map" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.0.0.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.0.0.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.0.1.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.0.1.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.0.2.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.0.2.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.0.3.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.0.3.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.0.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.0.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.1.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.1.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.2.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.2.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.3.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.4.1.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.4.1.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.4.2.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.4.2.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.4.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.4.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.5.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.1.5.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.2.0.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.2.0.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.2.1.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.2.1.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.2.2.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.2.2.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.3.0.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.3.0.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.3.1.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.1.3.1.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.2.0.0-rc1.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.2.0.0-rc1.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.2.0.1.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.2.0.1.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.2.0.2.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.2.0.2.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.2.0.3.nupkg" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\nuget\toastr.2.0.3.nuspec" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\README.md" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\release checklist.md" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\tests\qunit\qunit.js" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\tests\unit\qunit-helper.js" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\tests\unit\toastr-tests.js" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\tests\unit\x.js" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\toastr.js" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\toastr.less" />
+    <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\toastr.scss" />
     <None Include="wwwroot\lib\jquery-ui-1.12.1\external\jquery\jquery.js" />
     <None Include="wwwroot\lib\jquery-ui-1.12.1\jquery-ui.js" />
     <None Include="wwwroot\lib\jquery-ui-1.12.1\jquery-ui.min.js" />
