--- a/Alphasoft/appsettings.json
+++ b/Alphasoft/appsettings.json
@@ -1,18 +1,20 @@
 {
-    "ConnectionStrings": {
-        //"DefaultConnection": "Server=DESKTOP-OSO90FU\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
-        "DefaultConnection": "Server=DESKTOP-KLORVSV\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
-        //"DefaultConnection": "Server=DESKTOP-OSO90FU\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-FCFTEDQ\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=DESKTOP-KLORVSV\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=DESKTOP-OSO90FU\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
 
-    },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
 
 
 //DESKTOP-KLORVSV\SQLEXPRESS
 //DESKTOP-OSO90FU\SQLEXPRESS
+
+//DESKTOP-FCFTEDQ\SQLEXPRESS
