--- a/Alphasoft/appsettings.json
+++ b/Alphasoft/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-FCFTEDQ\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
-    //"DefaultConnection": "Server=DESKTOP-KLORVSV\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=DESKTOP-FCFTEDQ\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-KLORVSV\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"DefaultConnection": "Server=DESKTOP-OSO90FU\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   },
