--- a/Alphasoft/appsettings.json
+++ b/Alphasoft/appsettings.json
@@ -1,20 +1,11 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=DESKTOP-FCFTEDQ\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "DefaultConnection": "Server=DESKTOP-KLORVSV\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
-    //"DefaultConnection": "Server=DESKTOP-OSO90FU\\SQLEXPRESS;Database=Alphasoft;Trusted_Connection=True;MultipleActiveResultSets=true"
-
+    "DefaultConnection": "Server=103.218.25.213;Database=AlphaWebsite;User ID=sa;Password=alpha%soft%2019;MultipleActiveResultSets=true"
   },
   "Logging": {
-    "LogLevel": {
+    "LogLevel": { 
       "Default": "Warning"
     }
   },
   "AllowedHosts": "*"
 }
-
-
-//DESKTOP-KLORVSV\SQLEXPRESS
-//DESKTOP-OSO90FU\SQLEXPRESS
-
-//DESKTOP-FCFTEDQ\SQLEXPRESS
