--- a/Alphasoft/Alphasoft.csproj
+++ b/Alphasoft/Alphasoft.csproj
@@ -17,6 +17,8 @@
     <Compile Remove="Migrations\20191103072617_Script0101.Designer.cs" />
     <Compile Remove="Migrations\20191103073519_HostingPlan.cs" />
     <Compile Remove="Migrations\20191103073519_HostingPlan.Designer.cs" />
+    <Compile Remove="Migrations\20191118050127_Menus.cs" />
+    <Compile Remove="Migrations\20191118050127_Menus.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,6 +45,7 @@
     <None Include="Views\ClientView\AboutUsView.cshtml" />
     <None Include="Views\ClientView\Faq.cshtml" />
     <None Include="Views\ClientView\Product.cshtml" />
+    <None Include="Views\ClientView\Products.cshtml" />
     <None Include="Views\ClientView\Section_8.cshtml" />
     <None Include="Views\ClientView\_Section2.cshtml" />
     <None Include="Views\ClientView\TeamView.cshtml" />
@@ -54,6 +57,18 @@
     <None Include="Views\ClientView\_Section6.cshtml" />
     <None Include="Views\ClientView\_Section7.cshtml" />
     <None Include="wwwroot\js\AboutUs\aboutUs.js" />
+    <None Include="wwwroot\lib\bootstrap-toggle\.gitignore" />
+    <None Include="wwwroot\lib\bootstrap-toggle\doc\nytdev.svg" />
+    <None Include="wwwroot\lib\bootstrap-toggle\doc\script.js" />
+    <None Include="wwwroot\lib\bootstrap-toggle\Gruntfile.js" />
+    <None Include="wwwroot\lib\bootstrap-toggle\js\bootstrap-toggle.js" />
+    <None Include="wwwroot\lib\bootstrap-toggle\js\bootstrap-toggle.min.js" />
+    <None Include="wwwroot\lib\bootstrap-toggle\js\bootstrap-toggle.min.js.map" />
+    <None Include="wwwroot\lib\bootstrap-toggle\js\bootstrap2-toggle.js" />
+    <None Include="wwwroot\lib\bootstrap-toggle\js\bootstrap2-toggle.min.js" />
+    <None Include="wwwroot\lib\bootstrap-toggle\js\bootstrap2-toggle.min.js.map" />
+    <None Include="wwwroot\lib\bootstrap-toggle\LICENSE" />
+    <None Include="wwwroot\lib\bootstrap-toggle\README.md" />
     <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\.gitattributes" />
     <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\.gitignore" />
     <None Include="wwwroot\lib\CodeSeven-toastr-50092cc\.jscsrc" />
