--- a/Alphasoft/Alphasoft.csproj
+++ b/Alphasoft/Alphasoft.csproj
@@ -42,16 +42,18 @@
   <ItemGroup>
     <None Include="Views\AboutUses\Index.cshtml" />
     <None Include="Views\AboutUses\_Create.cshtml" />
-    <None Include="Views\ClientView\AboutUsView.cshtml" />
+    <None Include="Views\ClientView\AboutUs.cshtml" />
     <None Include="Views\ClientView\Blogs.cshtml" />
+    <None Include="Views\ClientView\Career.cshtml" />
     <None Include="Views\ClientView\CategoryWiseProduct.cshtml" />
     <None Include="Views\ClientView\Faq.cshtml" />
     <None Include="Views\ClientView\Product.cshtml" />
     <None Include="Views\ClientView\Products.cshtml" />
     <None Include="Views\ClientView\Section_8.cshtml" />
+    <None Include="Views\ClientView\Services.cshtml" />
     <None Include="Views\ClientView\_CategoryWiseProducts.cshtml" />
     <None Include="Views\ClientView\_Section2.cshtml" />
-    <None Include="Views\ClientView\TeamView.cshtml" />
+    <None Include="Views\ClientView\OurTeam.cshtml" />
     <None Include="Views\ClientView\TeamViewDetails.cshtml" />
     <None Include="Views\ClientView\_Section1.cshtml" />
     <None Include="Views\ClientView\_Section3.cshtml" />
