migrate to .net 8

--- a/Alphasoft/appsettings.Development.json
+++ b/Alphasoft/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=DynamicWebsiteDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
