--- a/Alphasoft/appsettings.json
+++ b/Alphasoft/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=103.218.25.213;Database=AlphaWebsite;User ID=sa;Password=alpha%soft%2019;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=DynamicWebsiteDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
-    "LogLevel": { 
+    "LogLevel": {
       "Default": "Warning"
     }
   },
